discussion/kv_engine/174237/174237_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50984: Remove 'force' arg from CM::checkOpenCheckpoint()

Replaced by a direct call to addNewCheckpoint().

Change-Id: I114e2d64a49fc00135b98efa1fd9f5f88a91b5ef

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-27 13:30:09.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 14:00:07.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27269/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27269/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18852/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18852/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19196/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19196/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19894/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19894/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17992/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17992/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17069/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17069/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17069/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6723/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6723/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6816/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">6 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6816/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38408/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45727/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16035/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
